Payable and Receivable Pagination

--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -5,7 +5,7 @@
 <script src="~/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_Search_Event.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_Search_Methods.js"></script>
-
+<script src="~/Scripts/Modules/Receivable/Receivable_events.js"></script>
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
