Pending Changes of Product validation

--- a/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
@@ -62,7 +62,7 @@
     </form>
     <form role="form" id="frmProductMRP">
         <input type="hidden" id="hdn_ProductId" name="Product.Product_Id" class="auto-complete-value" value="@Model.Product.Product_Id" />
-
+        @*<input type="hidden" name="PriceVerifications" />*@
         @*<input type="text" id="hdn_ProductMRPId" name="ProductMRPs[i].Product_MRP_Id" class="ProductMRPs" value="@Model.ProductMRPs[i].Product_MRP_Id" />
             <input type="text" id="hdn_ColourId" name="ProductMRPs[i].Product_MRP_Id" class="ProductMRPs" value="@Model.ProductMRPs[i].Colour_Id" />
             <input type="text" id="hdn_ColourName" name="ProductMRPs[i].Product_MRP_Id" class="ProductMRPs" value="@Model.ProductMRPs[i].Colour" />*@
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div>
-
+           
             <div id="common_Product_MRP" class="col-md-9" style="padding: 10px; border-top: 1px solid #DDD; min-height: 600px;">
 
             </div>
