--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
@@ -52,7 +52,7 @@
                                 <div class="input-group">
                                     <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Branch_Name" id="txtBranch_Name" placeholder="Enter Branch name to search." data-table="Branch" data-col="Branch_ID,Branch_Name" data-headernames="Branch Name">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                    <input type="hidden" id="hdnBranch_ID" name="Branch.Branch_ID" value="@Model.Branch.Branch_ID"> 
+                                    <input type="hidden" id="hdnBranch_ID" name="Filter.Branch_ID" value="@Model.Filter.Branch_ID"> @*Added by Sushant on 07/10/2016*@
                                     <input type="hidden" id="hdnBranchID" value="" name="Filter.Branch_Name" class="auto-complete-value" />
 
                                 </div>
