--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
@@ -35,38 +35,28 @@
 
         <div class="row">
 
-            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 100px;">
+            <div class="col-md-12"  style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 100px;">
                 <input type="hidden" id="hdnPayment_Status1" value="@Model.Receivable.Payment_Status">
 
                 <div class="block">
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Total Amount</span>
-                            <input type="text" class="form-control input-sm" name="Receivable.Net_Amount" id="txtNet_Amount" value="@Model.Receivable.Net_Amount" placeholder="Total Amount" maxlength="10"/>
+                            <input type="text" class="form-control input-sm" name="Receivable.Net_Amount" id="txtNet_Amount" value="@Model.Receivable.Net_Amount" placeholder="Total Amount" maxlength="10" />
 
                             <input type="hidden" id="hdf_Sales_Invoice_Id" name="Receivable.Sales_Invoice_Id" value="@Model.Receivable.Sales_Invoice_Id">
                             <input type="hidden" id="hdnReceivable_Item_Id" name="Receivable.Receivable_Item_Id" value="@Model.Receivable.Receivable_Item_Id">
                             <input type="hidden" id="hdnReceivable_Id" name="Receivable.Receivable_Id" value="@Model.Receivable.Receivable_Id">
                             <input type="hidden" id="hdnCustomer_Id" name="Receivable.Customer_Id" value="@Model.Receivable.Customer_Id">
                             @*<input type="hidden" id="hdf_Sales_Credit_Note_Id" name="Receivable.Sales_Credit_Note_Id" value="@Model.Receivable.Sales_Credit_Note_Id">
-                            <input type="hidden" id="hdf_Gift_Voucher_Id" name="Receivable.Gift_Voucher_Id" value="@Model.Receivable.Gift_Voucher_Id">*@
+                        <input type="hidden" id="hdf_Gift_Voucher_Id" name="Receivable.Gift_Voucher_Id" value="@Model.Receivable.Gift_Voucher_Id">*@
                             @*<input type="hidden" id="hdnPurchase_Credit_Note_Id" name="Receivable.Purchase_Credit_Note_Id" value="@Model.Receivable.Purchase_Credit_Note_Id">*@
 
                         </div>
                     </div>
 
-                    @*<div class="col-md-4">
-                        <div class="form-group">
-                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment date</span>
-                            <div class="input-group date"  data-date="" data-date-format="dd-mm-yyyy">
-                                <input type="text" class="form-control datepicker" id="txtPayament_Date" name="Receivable.Payament_Date" value="@((Model.Receivable.Payament_Date == DateTime.MinValue ? "" : Model.Receivable.Payament_Date.ToString("dd-MM-yyyy")))" readonly />
-                                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                            </div>
-                        </div>
-                    </div>*@
-
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment date</span>
                             <div class="input-group date" data-date="" data-date-format="dd-mm-yyyy">
@@ -76,7 +66,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4" id="divBranch">
+                    <div class="col-md-3" id="divBranch">
 
                         <div class="form-group auto-complete">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
@@ -89,15 +79,15 @@
                         </div>
                     </div>
 
-            </div>
+                </div>
 
             </div>
 
-            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 100px;">
+            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD;  padding: 10px; height: 100px;">
 
                 <div class="block">
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Cash Amount</span>
                             <input type="text" class="form-control input-sm" name="Receivable.Cash_Amount" id="txtCash_amount" @*onchange="javascript: CalculateDiscount();"*@ value="@Model.Receivable.Cash_Amount" placeholder="Cash Amount" maxlength="10" />
@@ -112,21 +102,21 @@
 
                 <div class="block">
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Cheque Amount</span>
                             <input type="text" class="form-control input-sm" name="Receivable.Cheque_Amount" id="txtCheque_Amount" @*onchange="javascript: CalculateDiscount();"*@ value="@Model.Receivable.Cheque_Amount" placeholder="Enter Cheque Amount " maxlength="10" />
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Cheque No</span>
                             <input type="text" class="form-control input-sm" name="Receivable.Cheque_No" id="txtCheque_No" value="@Model.Receivable.Cheque_No" placeholder="Enter Cheque No" maxlength="20" />
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Cheque Date</span>
                             <div class="input-group date"  data-date="" data-date-format="MM-dd-yyyy">
@@ -144,7 +134,7 @@
                 <div class="block">
 
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Bank Name</span>
                             <input type="text" class="form-control input-sm" name="Receivable.Bank_Name" id="txtBank_Name" value="@Model.Receivable.Bank_Name" placeholder="Enter Bank Name" maxlength="50" />
@@ -160,14 +150,14 @@
                 <div class="block">
 
 
-                    <div id="divPaidAmount" class="col-md-4">
+                    <div id="divPaidAmount" class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit Note Amount</span>
-                            <input type="text" class="form-control input-sm" name="Receivable.Credit_Note_Amount" id="txtCredit_Note_Amount" @*onblur="javascript:CalculateDiscount();"*@ value="@Model.Receivable.Credit_Note_Amount" placeholder=" Enter Paid amount" maxlength="20"/>
+                            <input type="text" class="form-control input-sm" name="Receivable.Credit_Note_Amount" id="txtCredit_Note_Amount" @*onblur="javascript:CalculateDiscount();"*@ value="@Model.Receivable.Credit_Note_Amount" placeholder=" Enter Paid amount" maxlength="20" readonly/>
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit Note no</span>
                             <select class="form-control" id="drpCredit_Note_No" name="Receivable.Sales_Credit_Note_Id">
@@ -190,7 +180,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit Note Date</span>
                             <div class="input-group date"  data-date="" data-date-format="dd-mm-yyyy">
@@ -208,36 +198,36 @@
 
                 <div class="block">
 
-                    <div id="divCreditcardno" class="col-md-4  ">
+                    <div id="divCreditcardno" class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Card Amount</span>
-                            <input type="text" class="form-control input-sm" name="Receivable.Card_Amount" id="txtCard_Amount" @*onblur="javascript: CalculateDiscount();"*@ value="@Model.Receivable.Card_Amount" placeholder="Card Amount" maxlength="10"/>
+                            <input type="text" class="form-control input-sm" name="Receivable.Card_Amount" id="txtCard_Amount" @*onblur="javascript: CalculateDiscount();"*@ value="@Model.Receivable.Card_Amount" placeholder="Card Amount" maxlength="10" />
                         </div>
                     </div>
 
-                    <div id="divDebitcardno" class="col-md-4">
+                    <div id="divDebitcardno" class="col-md-3">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Card No </span>
                             <input type="text" class="form-control input-sm" name="Receivable.Credit_Card_No" id="txtCredit_Card_No" value="@Model.Receivable.Credit_Card_No" placeholder="Enter card no" maxlength="30" />
                         </div>
                     </div>
 
-
+                </div>
 
                 </div>
 
-                <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 100px;">
+            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 100px;">
 
                     <div class="block">
 
-                        <div id="divDebitcardno" class="col-md-4">
+                        <div id="divDebitcardno" class="col-md-3">
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Gift Voucher Amount </span>
-                                <input type="text" class="form-control input-sm" name="Receivable.Gift_Voucher_Amount" id="txtGift_Voucher_Amount" @*onblur="javascript:CalculateDiscount();"*@ value="@Model.Receivable.Gift_Voucher_Amount" placeholder="Enter Gift Voucher Amount" maxlength="20" />
+                                <input type="text" class="form-control input-sm" name="Receivable.Gift_Voucher_Amount" id="txtGift_Voucher_Amount" @*onblur="javascript:CalculateDiscount();"*@ value="@Model.Receivable.Gift_Voucher_Amount" placeholder="Enter Gift Voucher Amount" maxlength="20" readonly />
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Gift Voucher No</span>
                                 <select class="form-control" id="drpGift_Voucher_No" name="Receivable.Gift_Voucher_Id">
@@ -264,18 +254,18 @@
 
                 </div>
 
-                <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 100px;">
+            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 100px;">
 
                     <div class="block">
 
-                        <div id="divDebitcardno" class="col-md-4">
+                        <div id="divDebitcardno" class="col-md-3">
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Paid Amount </span>
                                 <input type="text" class="form-control input-sm" name="Receivable.Paid_Amount" id="txtPaid_Amount" onclick="javascript: CalculateDiscount();" onchange="javascript: BalanceAmount();" value="@Model.Receivable.Paid_Amount" placeholder="Paid Amount" maxlength="10" />
                             </div>
                         </div>
 
-                        <div id="divCreditcardno" class="col-md-4  ">
+                        <div id="divCreditcardno" class="col-md-3">
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Balance Amount</span>
                                 <input type="text" class="form-control input-sm" name="Receivable.Balance_Amount" id="txtBalance_Amount" value="@Model.Receivable.Balance_Amount" placeholder="Balance Amount" maxlength="10" />
@@ -286,17 +276,17 @@
 
                 </div>
 
-                <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
+            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
 
                     <div class="btn-group">
                         <button type="button" class="btn btn-success active" id="btnSavePay">Save</button>
 
-                        <button type="reset" class="btn btn-danger active" onclick="javascript: Cancle();">Reset</button>
+                        <button type="reset" class="btn btn-danger active" id="btnResetPay" onclick="javascript: Cancle();">Reset</button>
                     </div>
 
                 </div>
 
-                <div class="row">
+            <div class="row">
                     <div class="col-md-12">
                         <div class="table-responsive" style="margin: 50px 0;">
                             <table class="table table-bordered" id="tblReceivableItems">
@@ -409,7 +399,7 @@
 
             </div>
 
-        </div>
+      
     </form>
 
 </div>
