Purchase Order and Purchase Order Request Changes

--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -438,7 +438,7 @@
                             <td style="text-align:right; width:100px;">Net Amount.</td>
                             <td id="" style="width:100px;">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;" id="tdNetAmount">0</span>
-                                <input type="hidden" id="hdnTotalQuantity" name="PurchaseOrder.Net_Amount" />
+                                <input type="hidden" id="hdnNetAmount" name="PurchaseOrder.Net_Amount" />
                             </td>
                             <td style="width:auto;"></td>
                             <td style="width:180px;"></td>
