--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -285,7 +285,7 @@
                     <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Article No.</span>
-                        <select class="form-control select" id="drpArticle_No" name="PurchaseOrder.Article_No">
+                        <select class="form-control" id="drpArticle_No" name="PurchaseOrder.Article_No">
                             <option value="">Select Article No.</option>
                         </select>
                     </div>
