Bugs fixed on Giftvoucher

--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Print.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Print.cshtml
@@ -5,6 +5,7 @@
 }
 
 <script src="~/Scripts/Modules/PrintThis.js"></script>
+<script src="~/Scripts/Modules/GiftVoucher/giftvoucher_event.js"></script>@*Added by vinod mane on 10/10/2016*@
 <script type="text/javascript">
     $(document).ready(function () {
         //$('#btnPrint').click(function () {
