--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -257,7 +257,9 @@
                     <div class="btn-group">
                         <button type="button" class="btn btn-success active" id="btnAddSizesPurchaseOrder" disabled>Add Sizes</button>
                     </div>
+                   
                 </div>
+               
             </div>
 
             <div class="col-md-3" hidden>
@@ -314,7 +316,7 @@
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Base rate.</span>
                         @*<input type="text" class="form-control" value="@Model.PurchaseOrder.Purchase_Price"  id="textPurchase_Price" placeholder="Enter base rate." />*@
-                        <input type="text" class="form-control" value="@Model.PurchaseOrder.Purchase_Price" maxlength="5" name="PurchaseOrder.Purchase_Price" id="textPurchase_Price" placeholder="Enter base rate." />
+                        <input type="text" class="form-control" value="@(Model.PurchaseOrder.Purchase_Price == 0 ? "" : Model.PurchaseOrder.Purchase_Price.ToString())" maxlength="5" name="PurchaseOrder.Purchase_Price" id="textPurchase_Price" placeholder="Enter base rate." />
                     </div>
                 </div>
             </div>
@@ -334,7 +336,7 @@
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Size difference.</span>
                         @*<input type="text" class="form-control" value="@Model.PurchaseOrder.Size_Difference" id="textSize_Difference" placeholder="Enter size difference." />*@
-                        <input type="text" class="form-control" maxlength="5" value="@Model.PurchaseOrder.Size_Difference" name="PurchaseOrder.Size_Difference" id="textSize_Difference" placeholder="Enter size difference." />
+                        <input type="text" class="form-control" maxlength="5" value="@(Model.PurchaseOrder.Size_Difference == 0 ? "" : Model.PurchaseOrder.Size_Difference.ToString())" name="PurchaseOrder.Size_Difference" id="textSize_Difference" placeholder="Enter size difference." />
                     </div>
                 </div>
             </div>
@@ -446,7 +448,9 @@
                     </tbody>
                 </table>
 
+                <input type="hidden" id="hdnrecords_Validation" name="records_Validation" />
             </div>
+          
         </div>
 
         <div class="row">
