--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -148,7 +148,7 @@
                                         <th style="width:60px;">Quantity</th>
                                         <th style="width:60px;">WSR</th>
                                         <th style="width:60px;">Total Amount</th>
-                                        <th style="width:140px;">Action</th>
+                                        <th style="width:165px;">Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -239,13 +239,13 @@
                                             <label>Total Qty</label>
                                         </td>
                                         <td style="width:60px;">
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.Total_Quantity" readonly id="textTotalQuantity_0">
+                                            <input class="form-control input-sm" type="text" value="1" name="PurchaseReturn.Total_Quantity" readonly id="textTotalQuantity_0">
                                         </td>
                                         <td style="width:60px;">
                                             <label>Total Amt</label>
                                         </td>
                                         <td style="width:60px;">
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.Total_Amount" readonly id="textTotalAmount_0">
+                                            <input class="form-control input-sm" type="text" value="0" name="PurchaseReturn.Total_Amount" readonly id="textTotalAmount_0">
                                         </td>
                                         <td style="width:140px;"></td>
                                     </tr>
@@ -266,7 +266,7 @@
                                             <input class="form-control input-sm" type="text" name="PurchaseReturn.Discount_Percentage" value="0" onblur="javascript: CalculateDiscount();" id="textDiscountPercentage_0" maxlength="5">
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.Discount_Amount" readonly id="textDiscountAmount_0">
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.Discount_Amount" value="0" readonly id="textDiscountAmount_0">
                                         </td>
                                         <td></td>
                                     </tr>
@@ -285,7 +285,7 @@
                                             <label>Gross Amt</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.Gross_Amount" readonly id="textGrossAmount_0">
+                                            <input class="form-control input-sm" type="text" value="0" name="PurchaseReturn.Gross_Amount" readonly id="textGrossAmount_0">
                                         </td>
                                         <td></td>
                                     </tr>
@@ -303,10 +303,10 @@
                                             <label>Tax</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.Tax_Percentage" readonly id="textTaxPercentage_0" />
+                                            <input class="form-control input-sm" type="text" value="0" name="PurchaseReturn.Tax_Percentage" readonly id="textTaxPercentage_0" />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.Tax_Amount" readonly id="textTaxAmount_0">
+                                            <input class="form-control input-sm" type="text" value="0" name="PurchaseReturn.Tax_Amount" readonly id="textTaxAmount_0">
                                         </td>
                                         <td></td>
                                     </tr>
@@ -344,7 +344,7 @@
                                             <label>NET Amt</label>
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.Net_Amount" readonly id="textNETAmount_0">
+                                            <input class="form-control input-sm" type="text" value="0" name="PurchaseReturn.Net_Amount" readonly id="textNETAmount_0">
                                         </td>
                                         <td></td>
                                     </tr>
