--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -116,11 +116,11 @@
                                         <th style="width:60px;">Quantity</th>
                                         <th style="width:60px;">WSR</th>
                                         <th style="width:60px;">Total Amount</th>
-                                        <th style="width:140px;">Action</th>
+                                        <th style="width:165px;">Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <span generated="true" style="color: #b64645;" class="help-block pull-right" id="lblError"></span>
+                                    @*<span generated="true" style="color: #b64645;" class="help-block pull-right" id="lblError"></span>*@
                                     <tr id="PurchaseReturnRequestItemRow_0">
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Barcode" id="textBarcode_No_0" maxlength="30">
